selfhost/test/typechecker/indexing/tuple_error_hole.out
Error at %FILE_NAME%:1:30
Type mismatch
  |  val _: Int[] = (1, "two", [])[2]
                                  ^
Expected: Int[]
but instead found: <unknown>[]
