selfhost/test/typechecker/indexing/tuple_error_hole.abra
val _: Int[] = (1, "two", [])[2]
